@@ -1,4 +1,5 @@
 Verion 0.9.45dev (?? ??? 2004)
+  - Fixed Bug 1050786: Mail fails if not "\r\n" in extra headers
   - Fixed Bug 1052000: Error in Day view for several users
   - Applying patch #1055122: making custom colors update on change
   - Fixed bug 1044374: random issues with Bulgarian translation file
